<resources>
    <string name="app_name">ComicBookReader</string>

    <string name="activity_about">About this App</string>
    <string name="activity_file_choose">Choose file</string>
    <string name="activity_main">Single page view</string>
    <string name="activity_multipage">Multiple pages view</string>
    <string name="activity_settings">Settings</string>


    <string name="fragment_multipage">Multiple pages fragment</string>
    <string name="fragment_navigation_tab">Navigation tab fragment</string>
    <string name="fragment_singlepage">Single page fragment</string>

    <string name="drawer_item_other">Other</string>
    <string name="drawer_item_open_file">Open file</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_about_this_app">About this app</string>
    <string name="drawer_item_exit">Exit</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="label_multipage_view">Multipage mode</string>
    <string name="label_singlepage_view">Single page mode</string>
    <string name="label_no_document">Nothing is opened. Open the navigation drawer to choose file.</string>

    <string name="menu_item_switch_mode">Switch mode</string>


    <string name="dialog_exit_message">Are you sure you want to exit the application?</string>
    <string name="dialog_button_exit">Exit</string>
    <string name="action_button_cancel">Cancel</string>

    <string name="about_license">This application is not licensed and was created for educational purpose at ENSTA ParisTech</string>
    <string name="about_author_title">Author:</string>
    <string name="about_author">Andrii Dychka</string>
    <string name="about_github_title">Github:</string>
    <string name="about_github">https://github.com/trident2710</string>

    <string name="settings_image_filtering_title">Image filtering mode:</string>
    <string name="settings_image_filtering_text">For better text recognition</string>
    <string name="settings_image_filtering_image">For better image look</string>


    <string name="file_choose_comics_label">Comics on your device</string>
    <string name="permission_canceled_message">Permission denied to read your External storage</string>


</resources>
