<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dev.trident.comicbookreader.activities.about.AboutActivity">
    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/clAboutActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/tbAboutActivity"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="?attr/actionBarSize"
            android:padding="@dimen/activity_padding"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/about_license"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/activity_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/about_author_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginLeft="@dimen/activity_padding"
                    android:text="@string/about_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/activity_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/about_github_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginLeft="@dimen/activity_padding"
                    android:text="@string/about_github"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>
