<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dev.trident.comicbookreader.activities.settings.SettingsActivity">
    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/clSettingsActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/tbSettingsActivity"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:padding="@dimen/activity_padding"
            android:orientation="vertical"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/settings_image_filtering_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioGroup
                android:id="@+id/rgFilteringSettingsActivity"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:checked="true"
                    android:id="@+id/rbFilteringTextSettingsActivity"
                    android:text="@string/settings_image_filtering_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/rbFilteringImageSettingsActivity"
                    android:text="@string/settings_image_filtering_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>
        </LinearLayout>


    </android.support.design.widget.CoordinatorLayout>


</RelativeLayout>
